# djnn

./: CHANGELOG.md  CONTRIBUTING.md  README.md  djnn.cabal
app/: Main.hs
docs/: ARCHITECTURE.md  ROADMAP.md
src/Djnn/: Canonical.hs  Codec.hs
src/Djnn/Schema/: Approval.hs  Hook.hs  MCP.hs  Policy.hs
src/Djnn/Surface/Hook/: Claude.hs  Codex.hs  Cursor.hs  Gemini.hs
test/: Main.hs
